; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_x86.c_segment_base.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_x86.c_segment_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.descriptor_table = type { i64 }
%struct.desc_struct = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @segment_base(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.descriptor_table, align 8
  %5 = alloca %struct.desc_struct*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %33

12:                                               ; preds = %1
  %13 = call i32 @kvm_get_gdt(%struct.descriptor_table* %4)
  %14 = getelementptr inbounds %struct.descriptor_table, %struct.descriptor_table* %4, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  store i64 %15, i64* %6, align 8
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %16, 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %12
  %20 = call i32 (...) @kvm_read_ldt()
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i64 @segment_base(i32 %21)
  store i64 %22, i64* %6, align 8
  br label %23

23:                                               ; preds = %19, %12
  %24 = load i64, i64* %6, align 8
  %25 = load i32, i32* %3, align 4
  %26 = and i32 %25, -8
  %27 = sext i32 %26 to i64
  %28 = add i64 %24, %27
  %29 = inttoptr i64 %28 to %struct.desc_struct*
  store %struct.desc_struct* %29, %struct.desc_struct** %5, align 8
  %30 = load %struct.desc_struct*, %struct.desc_struct** %5, align 8
  %31 = call i64 @get_desc_base(%struct.desc_struct* %30)
  store i64 %31, i64* %7, align 8
  %32 = load i64, i64* %7, align 8
  store i64 %32, i64* %2, align 8
  br label %33

33:                                               ; preds = %23, %11
  %34 = load i64, i64* %2, align 8
  ret i64 %34
}

declare dso_local i32 @kvm_get_gdt(%struct.descriptor_table*) #1

declare dso_local i32 @kvm_read_ldt(...) #1

declare dso_local i64 @get_desc_base(%struct.desc_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
